renaming and associated changes

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing import PreprocessData\n",
-    "from baseline_model import ModelTrainer"
+    "from pitchiq_preprocess import PreprocessData\n",
+    "from pitchiq_train import ModelTrainer"
    ]
   },
   {
